# GreedLen

./: .gitignore  CMakeLists.txt  MakeFile  Makefile  README.md
doc/: graph.dot
doc/IR/: test.ll
doc/dot/: graph.dot
src/: CMakeLists.txt  driver.cpp  driver.hpp  main.cpp
src/argument/: argument.hpp
src/ast/: CMakeLists.txt  ast.def  ast.hpp  fwd.hpp
src/ast/base/: base_node.hpp
src/ast/code/: code_block.hpp
src/ast/expression/: arithmetic.hpp  call.hpp  expression.hpp  id.hpp
src/ast/function/: function.hpp  function_list.hpp  param_list.hpp  param_value_list.hpp
src/ast/program/: unit.hpp
src/ast/statement/: assign.hpp  if.hpp  print.hpp  return.hpp  statement.hpp  var_decl.hpp  while.hpp
src/containers/: SingleElemStack.hpp
src/front-end/: CMakeLists.txt  frontend.cpp  frontend.hpp
src/front-end/flex-bison/: CMakeLists.txt  lexer.hpp  lexer.lpp  parser.hpp  parser.ypp
src/util/: dot.hpp
src/visitor/: CMakeLists.txt  graphviz.cpp  graphviz.hpp  interpreter.cpp  interpreter.hpp  llvmir.cpp  llvmir.hpp  print.cpp  print.hpp  visitor.def  visitor.hpp
tests/: test_program.gr
